# personal-finance-dashboard

./: .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PRODUCTION_READY_SUMMARY.md  README.md  TECHNICAL_DOCUMENTATION.md  app.py  app_backup.py  app_new.py  app_old.py  config.py  docker-compose.yml  entrypoint.sh  env.example  init_db.py  models.py  pyproject.toml  requirements.txt  services.py  setup.py  test_consolidated.py  test_llm_debug.py  test_upload_pipeline.py
.aws/: README.md  infrastructure.tf  task-definition.json
.github/workflows/: ci-cd.yml  deploy.yml  test.yml
config/: categories.py
data/: account_config.json  categories.json  transactions.json
data/backups/: transactions_backup_20250523_011746.json  transactions_backup_20250523_012650.json
deployment/aws/: README.md  cloudformation-template.yaml  deploy.sh  docker-compose.prod.yml  nginx.conf  user-data.sh
docs/: API_DOCUMENTATION.md  BRANCH_PROTECTION_SETUP.md  DEPLOYMENT_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  ai_reference.json  update_docs.py
docs/api/: endpoints.md
docs/architecture/: storage.md
docs/parsers/: architecture.md  federal_bank.md  hdfc_credit_card.md  hdfc_savings.md
docs/testing/: README.md
llm_services/: llm_service.py
migrations/: 001_add_encryption_and_logging_tables.py  env.py
migrations/versions/: 001_add_encryption_and_logging.py  002_add_trace_id_and_enhanced_audit.py  f00293a22f41_fix_audit_logs_schema_inconsistencies.py  fbf53e4bf5a6_fix_audit_logs_id_column_type.py
models/: __init__.py  models.py  secure_transaction.py
parsers/: __init__.py  exceptions.py  federal_bank.py  federal_bank_parser.py  generic.py  hdfc_credit_card.py  hdfc_savings.py  structural_parser.py  universal_llm_parser.py
scripts/: background_tasks.py  cleanup.sh  database_migration.py  deploy.sh  monitoring.py  monitoring_routes.py  start-dev.py  start.sh  update_database_schema.py
static/css/: style.css
templates/: base.html  dashboard.html  dashboard.html.bak  index.html  review.html  review_upload.html  transactions.html  transactions_new.html
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  debug_federal_bank_parser.py  pipeline_test.py  test_app.py  test_comprehensive_integration.py  test_federal_bank_parser.py  test_hdfc_parser.py  test_integration.py  test_llm_debug.py  test_llm_extraction.py  test_parsers.py  test_pdf_processing.py  test_production.py  test_real_pdf_extraction.py  test_real_pdf_processing.py  test_universal_parser.py  test_upload_endpoints.py
utils/: encryption.py  pdf_utils.py
